# scatterscale

./: .gitignore  LICENSE  README.md  choose_scaler.py  outliers.py  pyproject.toml  requirements.txt  sandbox.ipynb
docs/: choose_scaler.rst  conf.py  index.rst  outliers.rst  scatterscale.rst
docs/tutorials/: full_demo.ipynb
scatterscale/: __init__.py  choose_scaler.py  outliers.py
